# mybooklog

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
blg/: api.py  cli.py  db.py
blg/static/: app.js  style.css
blg/templates/: index.html
docs/: booklog-api.md
mybooklog/: api.py  cli.py  db.py
mybooklog/static/: app.js  style.css
mybooklog/templates/: index.html
tests/: test_api.py  test_build.py  test_cli.py  test_db_io.py  test_query.py
